[package]
name = "k8s-scheduler-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.97.0", features = ["runtime", "derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
reqwest = { version = "0.12.12", features = ["json"] }
futures = "0.3"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
anyhow = "1.0.95"
