[package]
name = "k8s-scheduler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json"] }
futures = "0.3"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
anyhow = "1.0.98"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.9.1"
